# LocalLLM

./: .gitignore  Modelfile  README.md  agent.py  browser_utils.py  config.py  context_manager.py  database.py  error.txt  llm_wrapper.py  login_helper.py  main.py  output.txt  pyproject.toml  run.ps1  skills.py  stealth.py  tasks.db  utils.py  verify_local_time.py  verify_run_now.py
backend/: agent.py  config.py  main.py  utils.py
backend/automation/: __init__.py  browser_utils.py  skills.py
backend/core/: browser.py  evaluator.py  notifier.py  pipeline.py  plugin.py  prompts.py
backend/database/: __init__.py  models.py  session.py
backend/services/: __init__.py  context.py  llm.py
core/: browser.py  notifier.py  pipeline.py  prompts.py
frontend/: index.css  index.html  package-lock.json  package.json  tsconfig.json
frontend/components/: app-root.d.ts  app-root.js  app-root.js.map  app-root.ts  context-manager.ts  task-form.d.ts  task-form.js  task-form.js.map  task-form.ts  task-item.ts  task-list.d.ts  task-list.js  task-list.js.map  task-list.ts
scratch/: analyze_sofi.py  create_test_task.py  dump_contexts.py  inspect_controller.py  inspect_registry_deep.py  test_categorization_prompt.py  test_evaluator.py  test_extract.py  test_llm.py  test_pagination.py  test_parser.py  test_regex.py  test_saved_tasks_api.py  test_sofi_skill.py  test_telegram.py  test_weee_dom.py  update_db_context.py  update_db_context_v2.py  update_db_context_v3.py  update_db_context_v4.py  verify_exclusions.py  verify_fixes.py
site_skills/: safeway.py  sofi.py  weee.py
(+8 files in other folders)
