[project]
name = "localllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "browser-use>=0.12.2",
    "fastapi>=0.135.1",
    "fastapi-static-files",
    "langchain-ollama",
    "playwright",
    "pydantic",
    "requests",
    "sqlalchemy",
    "uvicorn",
]
